<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_weather"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/weather" />
        <item
            android:id="@+id/nav_announcement"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/announcement" />
        <item
            android:id="@+id/nav_live_chat"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/live_chat" />
        <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_menu_slideshow"
        android:title="Profile" />
    </group>

</menu>
