<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@android:color/white"
    tools:context=".WeatherActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/weather_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:orientation="vertical">

        <TextView
            android:id="@+id/weather_city_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/city_country"
            android:textSize="24sp"
            android:layout_marginTop="16dp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/weather_current_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/date_today"
            android:textSize="14sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorBlack"/>

        <ImageView
            android:id="@+id/weather_weather_icon"
            android:layout_width="95dp"
            android:layout_height="65dp"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sun"
            android:layout_marginTop="20dp"/>

        <com.github.pavlospt.CircleView
            android:id="@+id/weather_result_circle"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginTop="8dp"
            app:cv_titleSubtitleSpace="10"
            app:cv_fillColor="@android:color/white"
            app:cv_strokeColorValue="@color/colorCircleStroke"
            app:cv_backgroundColorValue="@color/colorCircleStroke"
            app:cv_titleColor="@color/colorBlack"
            app:cv_titleSize="50sp"
            app:cv_titleText="@string/current_temperature"
            app:cv_subtitleSize="12sp"
            app:cv_subtitleText="@string/weather_information"
            app:cv_subtitleColor="@color/colorBlack"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="3"
            android:layout_marginTop="12dp"
            android:layout_gravity="center_horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingLeft="16dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSubTitle"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:text="@string/wind"/>

                <TextView
                    android:id="@+id/weather_wind_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#4A148C"
                    android:textStyle="bold"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"
                    android:text="@string/wind_speed"/>

            </LinearLayout>

            <!--<LinearLayout-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:orientation="vertical"-->
                <!--android:layout_weight="1">-->

                <!--&lt;!&ndash;<ImageButton&ndash;&gt;-->
                    <!--&lt;!&ndash;android:id="@+id/weather_add_location"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_width="wrap_content"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_gravity="center_horizontal"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:background="@android:color/transparent"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:elevation="4dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:layout_marginTop="12dp"&ndash;&gt;-->
                    <!--&lt;!&ndash;android:src="@drawable/cross"/>&ndash;&gt;-->

            <!--</LinearLayout>-->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingRight="16dp"
                android:layout_weight="2">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorSubTitle"
                    android:textSize="14sp"
                    android:layout_gravity="right"
                    android:textStyle="bold"
                    android:text="@string/humidity"/>

                <TextView
                    android:id="@+id/weather_humidity_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#4A148C"
                    android:textStyle="bold"
                    android:layout_gravity="right"
                    android:textSize="14sp"
                    android:layout_marginTop="4dp"
                    android:text="@string/humidity_rate"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_weight="2"
        android:layout_margin="2dp"
        android:background="@color/colorBottomBackground"
        android:orientation="horizontal">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/weather_daily_list_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"

            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:scrollbars="none"/>

    </LinearLayout>

</LinearLayout>
